Store/k8s/store-client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-client-deployment
  namespace: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store-client
  template:
    metadata:
      labels:
        app: store-client
    spec:
      containers:
        - name: store-client
          image: zalmanphilip/store-client:1.0.0 #replace with the image that you build
          ports:
            - containerPort: 80
