Store/k8s/store-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: store-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: "nginx"
  namespace: store # Set the namespace to "store"
spec:
  rules:
    - http:
        paths:
          - path: /store(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-client-service
                port:
                  number: 80
          - path: /store/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: store-server-service
                port:
                  number: 4000
